FIX: overflow issues

--- a/app/globals.scss
+++ b/app/globals.scss
@@ -20,6 +20,7 @@ body {
   color: rgb(var(--foreground-rgb));
   font-family: font(secondary);
   font-size: 1rem;
+  overflow-x: hidden;
 }
 
 @layer utilities {
